[gd_scene load_steps=2 format=3 uid="uid://dijca26oysryj"]

[ext_resource type="Script" uid="uid://dj8upo55kfdcq" path="res://hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 94.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 24
text = "Score:0"

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Time: 2:00"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -21.0
offset_right = 100.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Deforestation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = 205.0
offset_right = 97.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
